# pypkgsize

./: .gitignore  pyproject.toml
pkgsize.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pypkgsize.egg-info/: PKG-INFO
