[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pypkgsize"
version = "1.0.0"
authors = [
  { name="Duc Nguyen", email="minhducng.dev@gmail.com" },
]
description = "A Python package to analyze the disk usage of installed packages."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "click>=8.0",
    "packaging",
]

[project.urls]
"Homepage" = "https://github.com/crkacer/pypkgsize"
"Bug Tracker" = "https://github.com/crkacer/pypkgsize/issues"

[project.scripts]
pkgsize = "pkgsize.cli:main"
